--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-uuid": "^2.0.0",
     "split-pane-react": "^0.1.3",
     "web-vitals": "^2.1.4"
   },
