--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/joy": "^5.0.0-beta.40",
     "@mui/material": "^5.15.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
@@ -15,6 +16,7 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "react": "^18.3.1",
+    "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.23.0",
